lox-tests/tests/super/parenthesized.stderr
ERROR: Expected '.' after 'super'
 --> 8:6
  |
8 |     (super).method();
  |      ^----^
